syntax = "proto3";
option java_multiple_files = true;
package com.myImplementation.grpc;

message array {
	repeated int32 item = 4 [packed=true];
}

message multiplyBlockRequest {
    repeated array matrixA = 1;
    repeated array matrixB = 2;
	string error = 4;
}

message multiplyBlockResponse {
    repeated array matrixC = 3;
}

service MatrixMultService {
    rpc multiplyBlock(multiplyBlockRequest) returns (multiplyBlockResponse);
	rpc AddBlock(multiplyBlockRequest) returns (multiplyBlockResponse);
}

